// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`System themes errors when theme palette references an invalid color 1`] = `
"Invalid field \\"themes.default.palettes.brand\\". Received object but must be a union of: string, shape
 - Invalid field \\"themes.default.palettes.brand.color\\". Invalid color \\"red\\"."
`;

exports[`System themes errors when theme palette references an invalid color shade 1`] = `
"Invalid field \\"themes.default.palettes.brand\\". Received object but must be a union of: string, shape
 - Invalid field \\"themes.default.palettes.brand.bg\\". Received object but must be a union of: string, shape
 - Invalid field \\"themes.default.palettes.brand.bg.base\\". String does not match. (pattern \\"^[a-z0-9]+(.(00|10|20|30|40|50|60|70|80|90))?$\\")"
`;

exports[`System themes loads a theme and all palette colors 1`] = `
Object {
  "palette": Object {
    "brand": Object {
      "bg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#008",
    },
    "danger": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#BE4",
    },
    "failure": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#BE0",
    },
    "info": Object {
      "bg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "color": Object {
        "00": "#FF0",
        "10": "#FF1",
        "20": "#FF2",
        "30": "#FF3",
        "40": "#FF4",
        "50": "#FF5",
        "60": "#FF6",
        "70": "#FF7",
        "80": "#FF8",
        "90": "#FF9",
      },
      "fg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#FF8",
    },
    "muted": Object {
      "bg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#008",
    },
    "neutral": Object {
      "bg": Object {
        "base": "#EE4",
        "disabled": "#EE3",
        "focused": "#EE5",
        "hovered": "#EE6",
        "selected": "#EE5",
      },
      "color": Object {
        "00": "#EE0",
        "10": "#EE1",
        "20": "#EE2",
        "30": "#EE3",
        "40": "#EE4",
        "50": "#EE5",
        "60": "#EE6",
        "70": "#EE7",
        "80": "#EE8",
        "90": "#EE9",
      },
      "fg": Object {
        "base": "#FF0",
        "disabled": "#FF1",
        "focused": "#FF2",
        "hovered": "#FF3",
        "selected": "#FF4",
      },
      "text": "#EE8",
    },
    "positive": Object {
      "bg": Object {
        "base": "#EE4",
        "disabled": "#EE3",
        "focused": "#EE5",
        "hovered": "#EE6",
        "selected": "#EE5",
      },
      "color": Object {
        "00": "#EE0",
        "10": "#EE1",
        "20": "#EE2",
        "30": "#EE3",
        "40": "#EE4",
        "50": "#EE5",
        "60": "#EE6",
        "70": "#EE7",
        "80": "#EE8",
        "90": "#EE9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#EE9",
    },
    "primary": Object {
      "bg": Object {
        "base": "#BE0",
        "disabled": "#BE1",
        "focused": "#005",
        "hovered": "#BE2",
        "selected": "#005",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#FF9",
        "disabled": "#003",
        "focused": "#FF8",
        "hovered": "#006",
        "selected": "#FF7",
      },
      "text": "#BE8",
    },
    "secondary": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#ED8",
    },
    "tertiary": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "text": "#BE8",
    },
    "warning": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#FF9",
        "disabled": "#FF9",
        "focused": "#FF9",
        "hovered": "#FF9",
        "selected": "#FF9",
      },
      "text": "#ED8",
    },
  },
}
`;

exports[`System themes supports palettes with different combinations of color and shade settings 1`] = `
Object {
  "palette": Object {
    "brand": Object {
      "bg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#008",
    },
    "danger": Object {
      "bg": Object {
        "base": "#BE3",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#EE4",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#ED5",
    },
    "failure": Object {
      "bg": Object {
        "base": "#EE4",
        "disabled": "#FF0",
        "focused": "#ED3",
        "hovered": "#BE2",
        "selected": "#001",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#ED9",
        "disabled": "#005",
        "focused": "#BE8",
        "hovered": "#EE7",
        "selected": "#FF6",
      },
      "text": "#FF0",
    },
    "info": Object {
      "bg": Object {
        "base": "#FF9",
        "disabled": "#FF0",
        "focused": "#FF8",
        "hovered": "#FF7",
        "selected": "#FF6",
      },
      "color": Object {
        "00": "#FF0",
        "10": "#FF1",
        "20": "#FF2",
        "30": "#FF3",
        "40": "#FF4",
        "50": "#FF5",
        "60": "#FF6",
        "70": "#FF7",
        "80": "#FF8",
        "90": "#FF9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#FF8",
    },
    "muted": Object {
      "bg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#FF9",
    },
    "neutral": Object {
      "bg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "color": Object {
        "00": "#FF0",
        "10": "#FF1",
        "20": "#FF2",
        "30": "#FF3",
        "40": "#FF4",
        "50": "#FF5",
        "60": "#FF6",
        "70": "#FF7",
        "80": "#FF8",
        "90": "#FF9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#008",
    },
    "positive": Object {
      "bg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "color": Object {
        "00": "#FF0",
        "10": "#FF1",
        "20": "#FF2",
        "30": "#FF3",
        "40": "#FF4",
        "50": "#FF5",
        "60": "#FF6",
        "70": "#FF7",
        "80": "#FF8",
        "90": "#FF9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#FF8",
    },
    "primary": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#BE8",
    },
    "secondary": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#FF4",
        "disabled": "#FF3",
        "focused": "#FF5",
        "hovered": "#FF6",
        "selected": "#FF5",
      },
      "text": "#BE8",
    },
    "tertiary": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#EE4",
        "disabled": "#EE3",
        "focused": "#EE5",
        "hovered": "#EE6",
        "selected": "#EE5",
      },
      "text": "#BE8",
    },
    "warning": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#ED9",
        "disabled": "#ED0",
        "focused": "#ED8",
        "hovered": "#ED7",
        "selected": "#ED6",
      },
      "text": "#ED8",
    },
  },
}
`;

exports[`System themes supports theme extending 1`] = `
Object {
  "palette": Object {
    "brand": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "text": "#BE8",
    },
    "danger": Object {
      "bg": Object {
        "base": "#ED9",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#ED0",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#ED8",
    },
    "failure": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#ff4",
        "disabled": "#ff3",
        "focused": "#ff5",
        "hovered": "#ff6",
        "selected": "#ff5",
      },
      "text": "#BE0",
    },
    "info": Object {
      "bg": Object {
        "base": "#ff4",
        "disabled": "#ff3",
        "focused": "#ff5",
        "hovered": "#ff6",
        "selected": "#ff5",
      },
      "color": Object {
        "00": "#ff0",
        "10": "#ff1",
        "20": "#ff2",
        "30": "#ff3",
        "40": "#ff4",
        "50": "#ff5",
        "60": "#ff6",
        "70": "#ff7",
        "80": "#ff8",
        "90": "#ff9",
      },
      "fg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "text": "#ff8",
    },
    "muted": Object {
      "bg": Object {
        "base": "#004",
        "disabled": "#003",
        "focused": "#005",
        "hovered": "#006",
        "selected": "#005",
      },
      "color": Object {
        "00": "#000",
        "10": "#001",
        "20": "#002",
        "30": "#003",
        "40": "#004",
        "50": "#005",
        "60": "#006",
        "70": "#007",
        "80": "#008",
        "90": "#009",
      },
      "fg": Object {
        "base": "#ff4",
        "disabled": "#ff3",
        "focused": "#ff5",
        "hovered": "#ff6",
        "selected": "#ff5",
      },
      "text": "#008",
    },
    "neutral": Object {
      "bg": Object {
        "base": "#EE4",
        "disabled": "#EE3",
        "focused": "#EE5",
        "hovered": "#EE6",
        "selected": "#EE5",
      },
      "color": Object {
        "00": "#EE0",
        "10": "#EE1",
        "20": "#EE2",
        "30": "#EE3",
        "40": "#EE4",
        "50": "#EE5",
        "60": "#EE6",
        "70": "#EE7",
        "80": "#EE8",
        "90": "#EE9",
      },
      "fg": Object {
        "base": "#ff0",
        "disabled": "#ff1",
        "focused": "#ff4",
        "hovered": "#ff3",
        "selected": "#ff8",
      },
      "text": "#EE8",
    },
    "positive": Object {
      "bg": Object {
        "base": "#EE4",
        "disabled": "#EE3",
        "focused": "#EE5",
        "hovered": "#EE6",
        "selected": "#EE5",
      },
      "color": Object {
        "00": "#EE0",
        "10": "#EE1",
        "20": "#EE2",
        "30": "#EE3",
        "40": "#EE4",
        "50": "#EE5",
        "60": "#EE6",
        "70": "#EE7",
        "80": "#EE8",
        "90": "#EE9",
      },
      "fg": Object {
        "base": "#ff4",
        "disabled": "#ff3",
        "focused": "#ff5",
        "hovered": "#ff6",
        "selected": "#ff5",
      },
      "text": "#EE9",
    },
    "primary": Object {
      "bg": Object {
        "base": "#BE0",
        "disabled": "#BE1",
        "focused": "#005",
        "hovered": "#BE2",
        "selected": "#005",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#ff9",
        "disabled": "#003",
        "focused": "#ff8",
        "hovered": "#006",
        "selected": "#ff7",
      },
      "text": "#BE8",
    },
    "secondary": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#ff4",
        "disabled": "#ff3",
        "focused": "#ff5",
        "hovered": "#ff6",
        "selected": "#ff5",
      },
      "text": "#ED8",
    },
    "tertiary": Object {
      "bg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "color": Object {
        "00": "#BE0",
        "10": "#BE1",
        "20": "#BE2",
        "30": "#BE3",
        "40": "#BE4",
        "50": "#BE5",
        "60": "#BE6",
        "70": "#BE7",
        "80": "#BE8",
        "90": "#BE9",
      },
      "fg": Object {
        "base": "#BE4",
        "disabled": "#BE3",
        "focused": "#BE5",
        "hovered": "#BE6",
        "selected": "#BE5",
      },
      "text": "#BE8",
    },
    "warning": Object {
      "bg": Object {
        "base": "#ED4",
        "disabled": "#ED3",
        "focused": "#ED5",
        "hovered": "#ED6",
        "selected": "#ED5",
      },
      "color": Object {
        "00": "#ED0",
        "10": "#ED1",
        "20": "#ED2",
        "30": "#ED3",
        "40": "#ED4",
        "50": "#ED5",
        "60": "#ED6",
        "70": "#ED7",
        "80": "#ED8",
        "90": "#ED9",
      },
      "fg": Object {
        "base": "#ff9",
        "disabled": "#ff9",
        "focused": "#ff9",
        "hovered": "#ff9",
        "selected": "#ff9",
      },
      "text": "#ED8",
    },
  },
}
`;
